# Permasign

./: .gitignore  LICENSE  permasign.1  pyproject.toml
permasign/: __init__.py  cli.py  permasign.py  utils.py
