[tool.poetry]
name = "permasign"
version = "1.0.0"
description = "A small library to permanently sign any app on jailbroken iOS"
authors = ["TheRealKeto <therealketo@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/TheRealKeto/Permasign"
include = ["permasign.1"]

[tool.poetry.scripts]
permasign = "permasign.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
flake8 = "^5.0.4"
pyright = "^1.1.268"

[tool.mypy]
python_version = "3.8"
exclude = [
    "permasign/cli.py"
]

[tool.pyright]
ignore = [
    "dist",
    "env",
    "**/__pycache__",
    "permasign/cli.py"
]
pythonVersion = "3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
