[tool.poetry]
name = "permasign"
version = "1.1.1"
description = "A small library to permanently sign any app on jailbroken iOS"
authors = ["TheRealKeto <therealketo@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/TheRealKeto/Permasign"
include = [{ path = "permasign.1", format = "sdist" }]

[tool.poetry.scripts]
permasign = "permasign.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pyright = "^1.1.369"
ruff = "^0.5.0"
types-docopt = "^0.6.11.4"

[tool.poetry.build]
generate-setup-file = true

[tool.mypy]
python_version = "3.8"

[tool.pyright]
ignore = [
   "dist",
   "env",
   "**/__pycache__"
]
pythonVersion = "3.8"

[tool.ruff]
select = [
   "E",
   "F",
   "W",
   "N",
   "Q",
   "PTH"
]
line-length = 65
show-source = true
target-version = "py38"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
